Support yearly subscriptions and new usage parameter

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -175,6 +175,7 @@
 	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
 	"billing.order_number": "Número de comanda",
+	"billing.parameter.ai-tokens-used": "Peticions de cerca",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.generative": "Quantes respostes generatives?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
@@ -192,13 +193,18 @@
 	"billing.quotas.files": "Nombre màxim de fitxers",
 	"billing.quotas.generative": "Consulta generativa",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
+	"billing.quotas.media": "Indexació de vídeo i àudio",
+	"billing.quotas.paragraphs": "Blocs de text emmagatzemats",
+	"billing.quotas.paragraphs_processed": "Nombre de blocs de text",
+	"billing.quotas.predict": "Peticions de classificació",
+	"billing.quotas.searches": "Cerques",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.up-to": "Fins a",
 	"billing.quotas_label": "Quotes mensuals",
 	"billing.reactivate": "Reactivar",
 	"billing.renew-subscription": "Renovar la subscripció",
 	"billing.review.confirm_subscription": "Confirma la teva subscripció",
-	"billing.review.cost": "Subscripció mensual de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
+	"billing.review.cost": "Subscripció de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
 	"billing.review.subscribe_to": "T'estàs subscribint a {{account}}",
 	"billing.review.title": "Revisa la teva subscripció",
 	"billing.review_confirm": "Revisar i confirmar",
@@ -226,11 +232,13 @@
 	"billing.upgrade_now": "Actualitzar ara",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consum",
-	"billing.usage.interval": "Cost corresponent al consum des de {{from}} a {{to}}",
+	"billing.usage.cost": "Cost",
+	"billing.usage.description": "El cost mensual actual corresponent al consum fins a la data.",
+	"billing.usage.interval": "La propera factura es generarà el dia {{to}}",
 	"billing.usage.over_consume": "Sobreconsum",
-	"billing.usage.over_cost": "Sobrecost",
+	"billing.usage.requests": "Peticions",
 	"billing.usage.tier_included": "Inclòs al nivell",
-	"billing.usage.title": "Cost del sobreconsum",
+	"billing.usage.title": "Consum actual mensual",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Preus sense IVA",
 	"billing.year": "Any",
