--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -176,6 +176,7 @@
 	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
 	"billing.order_number": "Order number",
+	"billing.parameter.ai-tokens-used": "Search requests",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.generative": "How many generative answers?",
 	"billing.parameter.media": "How many hours of videos/audios?",
@@ -193,13 +194,18 @@
 	"billing.quotas.files": "Maximum number of files",
 	"billing.quotas.generative": "Generative query",
 	"billing.quotas.kbs": "Number of Knowledge Boxes",
+	"billing.quotas.media": "Video & audio indexing",
+	"billing.quotas.paragraphs": "Text block stored",
+	"billing.quotas.paragraphs_processed": "Number of text blocks",
+	"billing.quotas.predict": "Classification query",
+	"billing.quotas.searches": "Searches",
 	"billing.quotas.train": "Train",
 	"billing.quotas.up-to": "Up to",
 	"billing.quotas_label": "Monthly quotas",
 	"billing.reactivate": "Reactivate",
 	"billing.renew-subscription": "Renew subscription",
 	"billing.review.confirm_subscription": "Confirm your subscription",
-	"billing.review.cost": "Monthly {{cost}} subscription + consumption costs with a monthly budget restriction of {{budget}}",
+	"billing.review.cost": "{{cost}} subscription + consumption costs with a monthly budget restriction of {{budget}}",
 	"billing.review.subscribe_to": "Subscribing to {{account}}",
 	"billing.review.title": "Review your subscription",
 	"billing.review_confirm": "Review & Confirm",
@@ -227,11 +233,13 @@
 	"billing.upgrade_now": "Upgrade now",
 	"billing.usage.consumables": "Consumables",
 	"billing.usage.consumption": "Consumption",
-	"billing.usage.interval": "Cost corresponding to the consumption from {{from}} to {{to}}",
+	"billing.usage.cost": "Cost",
+	"billing.usage.description": "The current monthly cost corresponding to the consumption to date.",
+	"billing.usage.interval": "Next invoice will be generated on {{to}}",
 	"billing.usage.over_consume": "Over consume",
-	"billing.usage.over_cost": "Over cost",
+	"billing.usage.requests": "Requests",
 	"billing.usage.tier_included": "Tier included",
-	"billing.usage.title": "Overconsumption cost",
+	"billing.usage.title": "Monthly current consumption",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Prices without VAT",
 	"billing.year": "Year",
