--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -175,6 +175,7 @@
 	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
 	"billing.order_number": "Número de pedido",
+	"billing.parameter.ai-tokens-used": "Peticiones de búsqueda",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.generative": "¿Cuántas respuestas generativas?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
@@ -192,13 +193,18 @@
 	"billing.quotas.files": "Cantidad máxima de archivos",
 	"billing.quotas.generative": "Consulta generativa",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
+	"billing.quotas.media": "Indexación de video y audio",
+	"billing.quotas.paragraphs": "Bloques de texto almacenados",
+	"billing.quotas.paragraphs_processed": "Número de bloques de texto",
+	"billing.quotas.predict": "Peticiones de clasificación",
+	"billing.quotas.searches": "Búsquedas",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.up-to": "Hasta",
 	"billing.quotas_label": "Cuotas mensuales",
 	"billing.reactivate": "Reactivar",
 	"billing.renew-subscription": "Renovar la suscripción",
 	"billing.review.confirm_subscription": "Confirma tu suscripción",
-	"billing.review.cost": "Suscripción mensual de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
+	"billing.review.cost": "Suscripción de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
 	"billing.review.subscribe_to": "Te estás suscribiendo a {{account}}",
 	"billing.review.title": "Revisa tu suscripción",
 	"billing.review_confirm": "Revisar y confirmar",
@@ -226,11 +232,13 @@
 	"billing.upgrade_now": "Actualizar ahora",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consumo",
-	"billing.usage.interval": "Coste correspondiente al consumo de {{from }} a {{to}}",
+	"billing.usage.cost": "Coste",
+	"billing.usage.description": "El costo mensual actual correspondiente al consumo hasta la fecha.",
+	"billing.usage.interval": "La próxima factura se generará el {{to}}",
 	"billing.usage.over_consume": "Sobreconsumo",
-	"billing.usage.over_cost": "Sobrecoste",
+	"billing.usage.requests": "Peticiones",
 	"billing.usage.tier_included": "Incluido en el nivel",
-	"billing.usage.title": "Coste del sobreconsumo",
+	"billing.usage.title": "Consumo actual mensual",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Precios sin IVA",
 	"billing.year": "Año",
