--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -176,6 +176,7 @@
 	"billing.next-payment": "Prochain paiement",
 	"billing.not_company": "Je ne suis pas une entreprise",
 	"billing.order_number": "Numéro de commande",
+	"billing.parameter.ai-tokens-used": "Demandes de recherche",
 	"billing.parameter.files": "Combien de documents ?",
 	"billing.parameter.generative": "Combien de réponses génératives ?",
 	"billing.parameter.media": "Combien d'heures de vidéos/audios ?",
@@ -193,13 +194,18 @@
 	"billing.quotas.files": "Nombre maximum de fichiers",
 	"billing.quotas.generative": "Requête générative",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
+	"billing.quotas.media": "Indexation vidéo et audio",
+	"billing.quotas.paragraphs": "Bloc de texte stocké",
+	"billing.quotas.paragraphs_processed": "Nombre de blocs de texte",
+	"billing.quotas.predict": "Requête de classification",
+	"billing.quotas.searches": "Recherches",
 	"billing.quotas.train": "Train",
 	"billing.quotas.up-to": "Jusqu'à",
 	"billing.quotas_label": "Quotas mensuels",
 	"billing.reactivate": "Réactiver",
 	"billing.renew-subscription": "Renouveler l'abonnement",
 	"billing.review.confirm_subscription": "Confirmez votre abonnement",
-	"billing.review.cost": "Abonnement mensuel {{cost}} + frais de consommation avec une restriction budgétaire mensuelle de {{budget}}",
+	"billing.review.cost": "Abonnement {{cost}} + frais de consommation avec une restriction budgétaire mensuelle de {{budget}}",
 	"billing.review.subscribe_to": "S'abonner à {{account}}",
 	"billing.review.title": "Vérifiez votre abonnement",
 	"billing.review_confirm": "Examiner et confirmer",
@@ -227,11 +233,13 @@
 	"billing.upgrade_now": "Mettre à jour maintenant",
 	"billing.usage.consumables": "Consommables",
 	"billing.usage.consumption": "Consommation",
-	"billing.usage.interval": "Coût correspondant à la consommation de {{from}} à {{to}}",
+	"billing.usage.cost": "Coût",
+	"billing.usage.description": "Le coût mensuel actuel correspondant à la consommation à ce jour.",
+	"billing.usage.interval": "La prochaine facture sera générée le {{to}}",
 	"billing.usage.over_consume": "Surconsommer",
-	"billing.usage.over_cost": "Surcoût",
+	"billing.usage.requests": "Demandes",
 	"billing.usage.tier_included": "Niveau inclus",
-	"billing.usage.title": "Coût de surconsommation",
+	"billing.usage.title": "Consommation actuelle mensuelle",
 	"billing.vat_id": "Numéro de TVA",
 	"billing.without_vat": "Prix sans TVA",
 	"billing.year": "Année",
