Add new account types to the SDK and account type translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -92,6 +92,10 @@
 	"account.type.stash-starter": "Compte Starter",
 	"account.type.stash-startup": "Compte Startup",
 	"account.type.stash-trial": "Compte de prova",
+	"account.type.v3enterprise": "Compte Enterprise",
+	"account.type.v3fly": "Compte Fly",
+	"account.type.v3growth": "Compte Growth",
+	"account.type.v3starter": "Compte Starter",
 	"account.users_amount": "Nombre total d'usuaris al compte",
 	"account.users_left": "Llicències disponibles",
 	"account.zone_description": "Escull la zona i el proveïdor de processament que apareixerà com a predeterminat a totes les Caixes de coneixament d’aquest compte.",
