--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -92,6 +92,10 @@
 	"account.type.stash-starter": "Cuenta Starter",
 	"account.type.stash-startup": "Cuenta Startup",
 	"account.type.stash-trial": "Cuenta de prueba",
+	"account.type.v3enterprise": "Cuenta Enterprise",
+	"account.type.v3fly": "Cuenta Fly",
+	"account.type.v3growth": "Cuenta Growth",
+	"account.type.v3starter": "Cuenta Starter",
 	"account.users_amount": "Usuarios totales a la cuenta",
 	"account.users_left": "Licencias disponibles",
 	"account.zone_description": "Elija la zona y el proveedor de procesamiento que aparecerá como predeterminado en todas las Cajas de conocimiento de esta cuenta.",
