--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -89,10 +89,14 @@
 	"account.type.stash-business": "Compte d'affaires",
 	"account.type.stash-developer": "Compte de démarrage/développeur",
 	"account.type.stash-enterprise": "Compte Entreprise",
-	"account.type.stash-growth": "Compte de croissance",
-	"account.type.stash-starter": "Compte de démarrage",
-	"account.type.stash-startup": "Compte de démarrage",
+	"account.type.stash-growth": "Compte Growth",
+	"account.type.stash-starter": "Compte Starter",
+	"account.type.stash-startup": "Compte Startup",
 	"account.type.stash-trial": "Compte d'essai",
+	"account.type.v3enterprise": "Compte Entreprise",
+	"account.type.v3fly": "Compte Fly",
+	"account.type.v3growth": "Compte Growth",
+	"account.type.v3starter": "Compte Starter",
 	"account.users_amount": "Nombre total d'utilisateurs dans le compte",
 	"account.users_left": "Total des licences restantes",
 	"account.zone_description": "Zone où les données sont hébergées",
