--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -93,6 +93,10 @@
 	"account.type.stash-starter": "Starter account",
 	"account.type.stash-startup": "Startup account",
 	"account.type.stash-trial": "Trial Account",
+	"account.type.v3enterprise": "Enterprise Account",
+	"account.type.v3fly": "Fly account",
+	"account.type.v3growth": "Growth account",
+	"account.type.v3starter": "Starter account",
 	"account.users_amount": "Total number of users in the account",
 	"account.users_left": "Total licenses left",
 	"account.zone_description": "Zone where data is hosted",
