Modify billing side menu

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -712,13 +712,13 @@
 	"sidenav.activity": "Registre d'activitat",
 	"sidenav.advanced": "Avançat",
 	"sidenav.api_keys": "Tecles API",
-	"sidenav.billing": "Pagament",
 	"sidenav.classification": "Conjunts d'etiquetes",
 	"sidenav.home": "Inici",
 	"sidenav.list": "Llistat recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Tecles NUA",
 	"sidenav.settings": "Preferències",
+	"sidenav.subscription": "Subscripció",
 	"sidenav.sync": "Sincronitzar",
 	"sidenav.synonyms": "Sinònims",
 	"sidenav.trainings": "Entrenaments",
