--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -713,13 +713,13 @@
 	"sidenav.activity": "Activity log",
 	"sidenav.advanced": "Advanced",
 	"sidenav.api_keys": "API keys",
-	"sidenav.billing": "Payment",
 	"sidenav.classification": "Label sets",
 	"sidenav.home": "Home",
 	"sidenav.list": "Resources list",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "NUA keys",
 	"sidenav.settings": "Settings",
+	"sidenav.subscription": "Subscription",
 	"sidenav.sync": "Synchronize",
 	"sidenav.synonyms": "Synonyms",
 	"sidenav.trainings": "Trainings",
