--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -712,13 +712,13 @@
 	"sidenav.activity": "Registro de actividad",
 	"sidenav.advanced": "Avanzado",
 	"sidenav.api_keys": "Claves de api",
-	"sidenav.billing": "Pago",
 	"sidenav.classification": "Conjuntos de etiquetas",
 	"sidenav.home": "Inicio",
 	"sidenav.list": "Listado de recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Claves NUA",
 	"sidenav.settings": "Preferencias",
+	"sidenav.subscription": "Suscripción",
 	"sidenav.sync": "Sincronizar",
 	"sidenav.synonyms": "Sinónimos",
 	"sidenav.trainings": "Entrenamientos",
