--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -713,13 +713,13 @@
 	"sidenav.activity": "Journal d'activité",
 	"sidenav.advanced": "Avancé",
 	"sidenav.api_keys": "Clés API",
-	"sidenav.billing": "Paiement",
 	"sidenav.classification": "Familles d'étiquettes",
 	"sidenav.home": "Accueil",
 	"sidenav.list": "Liste des ressources",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Clés NUA",
 	"sidenav.settings": "Réglages",
+	"sidenav.subscription": "Abonnement",
 	"sidenav.sync": "Synchroniser",
 	"sidenav.synonyms": "Synonymes",
 	"sidenav.trainings": "Entraînements",
