--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -267,7 +267,7 @@
 	"dashboard-home.kb-content.processing-queue.pendings": "{{count}} recursos estan pendents de processar.",
 	"dashboard-home.kb-content.processing-queue.title": "Cua de processament",
 	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
-	"dashboard-home.kb-details.language-model": "Model lingüístic aplicat",
+	"dashboard-home.kb-details.generative-model": "Model generatiu",
 	"dashboard-home.kb-details.slug": "Knowledge Box slug",
 	"dashboard-home.kb-details.title": "Detalls de la Knowledge Box ",
 	"dashboard-home.kb-details.uid": "Knowledge Box UID",
