--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -268,7 +268,7 @@
 	"dashboard-home.kb-content.processing-queue.pendings": "{{count}} resources are pending to be processed.",
 	"dashboard-home.kb-content.processing-queue.title": "Processing queue",
 	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
-	"dashboard-home.kb-details.language-model": "Language model applied",
+	"dashboard-home.kb-details.generative-model": "Generative model",
 	"dashboard-home.kb-details.slug": "Knowledge Box slug",
 	"dashboard-home.kb-details.title": "Knowledge Box details",
 	"dashboard-home.kb-details.uid": "Knowledge Box UID",
