--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -268,7 +268,7 @@
 	"dashboard-home.kb-content.processing-queue.pendings": "{{count}}  ressources sont en attente de traitement.",
 	"dashboard-home.kb-content.processing-queue.title": "File d'attente de traitement",
 	"dashboard-home.kb-details.endpoint": "NucliaDB API endpoint",
-	"dashboard-home.kb-details.language-model": "Modèle de langage appliqué",
+	"dashboard-home.kb-details.generative-model": "Modèle génératif",
 	"dashboard-home.kb-details.slug": "Knowledge Box slug",
 	"dashboard-home.kb-details.title": "Détails de la Knowledge Box ",
 	"dashboard-home.kb-details.uid": "Knowledge Box UID",
