Add feature flag for new pricing

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -148,6 +148,7 @@
 	"billing.email": "Factures enviades a",
 	"billing.end-service": "Finalitza el teu servei",
 	"billing.end-subscription": "Finalitzar la subscripció",
+	"billing.extra_paragraphs_cost": "Si se supera el límit de bloc de text emmagatzemat inclòs, cobrarem {{price}} / bloc de text emmagatzemat.",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
 	"billing.features.boost": "Potenciador d'indexació",
@@ -165,6 +166,7 @@
 	"billing.features.usage": "Analítica d'ús i retenció",
 	"billing.features.videos": "Vídeos i indexació d'àudio",
 	"billing.features.widget": "Accés al sistema de widgets",
+	"billing.free": "Gratuït",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturació",
 	"billing.hour": "hora",
@@ -178,7 +180,9 @@
 	"billing.my-subscription": "La meva subscripció",
 	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
+	"billing.on_premise_cost": "Amb <strong>NucliaDB On-prem</strong> no comporta cap cost addicional.",
 	"billing.order_number": "Número de comanda",
+	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 blocs de text",
 	"billing.parameter.ai-tokens-used": "Peticions de cerca",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.generative": "Quantes respostes generatives?",
@@ -195,13 +199,17 @@
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "Còdi postal",
 	"billing.quotas.files": "Nombre màxim de fitxers",
+	"billing.quotas.files-up-to": "Arxius fins a",
 	"billing.quotas.generative": "Consulta generativa",
+	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexació de vídeo i àudio",
 	"billing.quotas.paragraphs": "Blocs de text emmagatzemats",
 	"billing.quotas.paragraphs_processed": "Nombre de blocs de text",
 	"billing.quotas.predict": "Peticions de classificació",
+	"billing.quotas.search": "Cerca",
 	"billing.quotas.searches": "Cerques",
+	"billing.quotas.storage": "Emmagatzematge",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.training": "Entrenament",
 	"billing.quotas.up-to": "Fins a",
@@ -228,6 +236,7 @@
 	"billing.success": "Subscripció satisfactòria",
 	"billing.support": "Suport",
 	"billing.tier": "Nivell",
+	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
 	"billing.unlimited": "Il·limitat",
 	"billing.unsubscribe-error": "Error en cancel·lar la subscripció",
