--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -148,6 +148,7 @@
 	"billing.email": "Facturas enviadas a",
 	"billing.end-service": "Finaliza tu servicio",
 	"billing.end-subscription": "Finalizar la suscripción",
+	"billing.extra_paragraphs_cost": "Si se excede el límite de bloques de texto almacenado incluido, cobraremos {{price}} / bloque de texto almacenado.",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
 	"billing.features.boost": "Refuerzo de indexación",
@@ -165,6 +166,7 @@
 	"billing.features.usage": "Análisis de uso y retención",
 	"billing.features.videos": "Indexación de videos y audio",
 	"billing.features.widget": "Acceso al sistema de widgets",
+	"billing.free": "Gratuito",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturación",
 	"billing.hour": "hora",
@@ -178,7 +180,9 @@
 	"billing.my-subscription": "Mi suscripción",
 	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
+	"billing.on_premise_cost": "Con <strong>NucliaDB On-prem</strong> no conlleva ningún coste extra.",
 	"billing.order_number": "Número de pedido",
+	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 bloques de texto.",
 	"billing.parameter.ai-tokens-used": "Peticiones de búsqueda",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.generative": "¿Cuántas respuestas generativas?",
@@ -195,13 +199,17 @@
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "Código postal",
 	"billing.quotas.files": "Cantidad máxima de archivos",
+	"billing.quotas.files-up-to": "Archivos hasta",
 	"billing.quotas.generative": "Consulta generativa",
+	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexación de video y audio",
 	"billing.quotas.paragraphs": "Bloques de texto almacenados",
 	"billing.quotas.paragraphs_processed": "Número de bloques de texto",
 	"billing.quotas.predict": "Peticiones de clasificación",
+	"billing.quotas.search": "Búsqueda",
 	"billing.quotas.searches": "Búsquedas",
+	"billing.quotas.storage": "Almacenamiento",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.training": "Entrenamiento",
 	"billing.quotas.up-to": "Hasta",
@@ -228,6 +236,7 @@
 	"billing.success": "Suscripción exitosa",
 	"billing.support": "Soporte",
 	"billing.tier": "Nivel",
+	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
 	"billing.unlimited": "Ilimitado",
 	"billing.unsubscribe-error": "Error al cancelar la suscripción",
