--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -149,6 +149,7 @@
 	"billing.email": "Factures envoyées à",
 	"billing.end-service": "Mettre fin à votre service",
 	"billing.end-subscription": "Mettre fin à l'abonnement",
+	"billing.extra_paragraphs_cost": "Si la limite de blocs de texte stockés inclus est dépassée, nous facturerons {{price}} / bloc de texte stocké.",
 	"billing.features.anon": "Anonymisation des données",
 	"billing.features.apikey": "Clé API auto-hébergée",
 	"billing.features.boost": "Booster d’indexation",
@@ -166,6 +167,7 @@
 	"billing.features.usage": "Analyse d’utilisation et rétention",
 	"billing.features.videos": "Indexation de vidéos et audio",
 	"billing.features.widget": "Accès au système de widgets",
+	"billing.free": "Gratuit",
 	"billing.history.link": "L'histoire",
 	"billing.history.title": "Historique de facturation du compte",
 	"billing.hour": "heure",
@@ -179,7 +181,9 @@
 	"billing.my-subscription": "Mon abonnement",
 	"billing.next-payment": "Prochain paiement",
 	"billing.not_company": "Je ne suis pas une entreprise",
+	"billing.on_premise_cost": "Avec <strong>NucliaDB On-prem</strong> n’entraîne aucun coût supplémentaire.\n",
 	"billing.order_number": "Numéro de commande",
+	"billing.paragraphs_per_file": "Un fichier texte de 10 pages contient environ 300 blocs de texte",
 	"billing.parameter.ai-tokens-used": "Demandes de recherche",
 	"billing.parameter.files": "Combien de documents ?",
 	"billing.parameter.generative": "Combien de réponses génératives ?",
@@ -196,13 +200,17 @@
 	"billing.phone_placeholder": "par exemple. +34 000 000 000",
 	"billing.postal_code": "Zip *: français",
 	"billing.quotas.files": "Nombre maximum de fichiers",
+	"billing.quotas.files-up-to": "Fichiers jusqu'à",
 	"billing.quotas.generative": "Requête générative",
+	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexation vidéo et audio",
 	"billing.quotas.paragraphs": "Bloc de texte stocké",
 	"billing.quotas.paragraphs_processed": "Nombre de blocs de texte",
 	"billing.quotas.predict": "Requête de classification",
+	"billing.quotas.search": "Recherche",
 	"billing.quotas.searches": "Recherches",
+	"billing.quotas.storage": "Stockage",
 	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Entraînement",
 	"billing.quotas.up-to": "Jusqu'à",
@@ -229,6 +237,7 @@
 	"billing.success": "Inscription réussie",
 	"billing.support": "Soutien",
 	"billing.tier": "Étage",
+	"billing.trial.title": "{{days}} jours d'essai",
 	"billing.unit": "Unité",
 	"billing.unlimited": "Illimité",
 	"billing.unsubscribe-error": "Erreur lors de l'annulation de l'abonnement",
