--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -149,6 +149,7 @@
 	"billing.email": "Invoices sent to",
 	"billing.end-service": "End your service",
 	"billing.end-subscription": "End subscription",
+	"billing.extra_paragraphs_cost": "If the stored text block limit included is exceeded, we will charge {{price}} / stored text block.",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
 	"billing.features.boost": "Indexing booster",
@@ -166,6 +167,7 @@
 	"billing.features.usage": "Usage analytics and retention",
 	"billing.features.videos": "Videos and audio indexing",
 	"billing.features.widget": "Widget system access",
+	"billing.free": "Free",
 	"billing.history.link": "History",
 	"billing.history.title": "Account billing history",
 	"billing.hour": "hour",
@@ -179,7 +181,9 @@
 	"billing.my-subscription": "My subscription",
 	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
+	"billing.on_premise_cost": "With <strong>NucliaDB On-prem</strong> does not carry any extra cost.",
 	"billing.order_number": "Order number",
+	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 text blocks",
 	"billing.parameter.ai-tokens-used": "Search requests",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.generative": "How many generative answers?",
@@ -196,13 +200,17 @@
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "ZIP",
 	"billing.quotas.files": "Maximum number of files",
+	"billing.quotas.files-up-to": "Files up to",
 	"billing.quotas.generative": "Generative query",
+	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of Knowledge Boxes",
 	"billing.quotas.media": "Video & audio indexing",
 	"billing.quotas.paragraphs": "Text block stored",
 	"billing.quotas.paragraphs_processed": "Number of text blocks",
 	"billing.quotas.predict": "Classification query",
+	"billing.quotas.search": "Search",
 	"billing.quotas.searches": "Searches",
+	"billing.quotas.storage": "Storage",
 	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
@@ -229,6 +237,7 @@
 	"billing.success": "Successful subscription",
 	"billing.support": "Support",
 	"billing.tier": "Tier",
+	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
 	"billing.unlimited": "Unlimited",
 	"billing.unsubscribe-error": "Error when unsubscribing",
